@@ -30,6 +30,7 @@ Version 2.10
   ``gt``, ``ge``. (`#665`_)
 - ``import`` statement cannot end with a trailing comma. (`#617`_, `#618`_)
 - ``indent`` filter will not indent blank lines by default. (`#685`_)
+- Add ``reverse`` argument for ``dictsort`` filter. (`#692`_)
 
 .. _#469: https://github.com/pallets/jinja/pull/469
 .. _#475: https://github.com/pallets/jinja/pull/475
@@ -38,6 +39,7 @@ Version 2.10
 .. _#618: https://github.com/pallets/jinja/pull/618
 .. _#665: https://github.com/pallets/jinja/pull/665
 .. _#685: https://github.com/pallets/jinja/pull/685
+.. _#692: https://github.com/pallets/jinja/pull/692
 
 Version 2.9.6
 -------------
